name:                  lusp
version:               0.1.0.0
synopsis:              Front-end for lusp-lib
-- description:
license:               MIT
license-file:          LICENSE
author:                locksten
maintainer:            locksten@users.noreply.github.com
-- copyright:
-- category:
build-type:            Simple
-- extra-source-files:
cabal-version:         >= 1.10

executable lusp
  main-is:             Main.hs
  other-modules:       Paths
                      ,Repl
                      ,Paths_lusp
-- other-extensions:
  build-depends:       base == 4.8.*
                      ,lusp-lib == 0.1.*
                      ,directory == 1.2.*
                      ,readline == 1.0.*
                      ,filepath == 1.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
