name:                  lusp
version:               1.0.0.0
synopsis:              Terminal front-end for lusp-lib
license:               MIT
license-file:          LICENSE
author:                locksten
maintainer:            locksten@users.noreply.github.com
homepage:              https://github.com/locksten/lusp
build-type:            Simple
cabal-version:         >= 1.10

executable lusp
  main-is:             Main.hs
  other-modules:       Paths
                      ,Repl
                      ,Paths_lusp
  build-depends:       base == 4.8.*
                      ,lusp-lib == 0.1.*
                      ,directory == 1.2.*
                      ,readline == 1.0.*
                      ,filepath == 1.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
